Configuration MetaFlow Github CI
**Phenomenon and reproduction steps**

Configuration MetaFlow Github CI
- add workflow
- modify agent build

**Root cause and solution**

**Impactions**

**Test method**

**Affected branch(es)**

* main

**Checklist**

- [ ] Change synchronize required (trident-dump, trident-copy or trident-testsrv)
- [ ] Dependencies update required
- [ ] Common bug (similar problem in other code)
- [ ] Package successful (has changes in Makefile)

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM dfcloud-image-registry.cn-beijing.cr.aliyuncs.com/dev/alpine:latest as metaflow-server
+FROM alpine:latest as metaflow-server
 
 MAINTAINER songzhen@yunshan.net
 
