--- a/agent/docker/DockerfileToFix.build
+++ b/agent/docker/DockerfileToFix.build
@@ -14,11 +14,11 @@ RUN yum install make -y
 # 安装基础依赖
 RUN  yum install curl gcc openssl-devel  libpcap-devel perl-Digest-MD5 gcc elfutils-libelf-devel-static glibc-static zlib-static git  -y && \
      curl  https://sh.rustup.rs -so restup.sh; bash restup.sh -y && \
-     curl http://nexus.yunshan.net/repository/platform/metaflow-agent/llvm-clang-11.0.0-2.el7.x86_64.rpm --silent -O && \
+     curl http://cloud.deepservice.yunshan.net:1080/kernel/llvm-clang-11.0.0-2.el7.x86_64.rpm --silent -O && \
      yum --disablerepo=* localinstall -y ./llvm-clang-*.rpm && rm -rf llvm-clang-11.0.0-2.el7.x86_64.rpm && \
-     curl http://nexus.yunshan.net/repository/platform/metaflow-agent/libdwarf-0.4.0-1.el7.x86_64.rpm --silent -O && \
+     curl http://cloud.deepservice.yunshan.net:1080/kernel/libdwarf-0.4.0-1.el7.x86_64.rpm --silent -O && \
      yum --disablerepo=* localinstall -y ./libdwarf-*.rpm && rm -rf libdwarf-0.4.0-1.el7.x86_64.rpm && \
-     curl http://nexus.yunshan.net/repository/platform/metaflow-agent/bddisasm-1.34.10-1.el7.x86_64.rpm --silent -O && \
+     curl http://cloud.deepservice.yunshan.net:1080/kernel/bddisasm-1.34.10-1.el7.x86_64.rpm --silent -O && \
      yum --disablerepo=* localinstall -y ./bddisasm-*.rpm && rm -rf bddisasm-1.34.10-1.el7.x86_64.rpm && \
      yum clean all
 
@@ -31,18 +31,6 @@ RUN cargo install sccache && \
     ln -s /usr/local/llvm-clang/bin/llc /usr/bin/llc && \
     ln -s /usr/local/llvm-clang/bin/llvm-strip /usr/bin/llvm-strip && \
     ln -s /usr/local/llvm-clang/bin/llvm-objdump /usr/bin/llvm-objdump
-
-# 给cargo crates换镜像源
-COPY config /usr/local/cargo/
-
-# 添加能访问 gitlab 的 key，key 必须有访问依赖仓库的权限
-RUN mkdir /root/.ssh/
-COPY id_rsa /root/.ssh/id_rsa
-COPY ssh_config /root/.ssh/config
-RUN chmod 600 /root/.ssh/id_rsa
-
-# 增加.gitconfig，将内部库替换成 http 链接，可以直接下载
-COPY gitconfig /etc/
 
 CMD bash
 
